--- a/src/components/widgetLg/WidgetLg.css
+++ b/src/components/widgetLg/WidgetLg.css
@@ -21,6 +21,13 @@
   text-align: left;
 }
 
+tbody:before {
+  content: "@";
+  display: block;
+  line-height: 15px;
+  text-indent: -99999px;
+}
+
 .widgetLgOrderId,
 .widgetLgCompanyName,
 .widgetLgAssignedTo,
@@ -29,12 +36,32 @@
 }
 
 .widgetLgButton {
-  padding: 5px 7px;
-  border: none;
+  padding: 3px 6px;
   border-radius: 10px;
+  font-size: 12px;
+  text-align: center;
 }
 
-.widgetLgButton.Pass {
+.widgetLgButton.OrderPlaced {
+  background-color: #bdbdbd;
+  color: #424242;
+}
+
+.widgetLgButton.InProgress {
+  background-color: #face4b;
+  color: #b28704;
+}
+
+.widgetLgButton.InTransit {
+  background-color: #35baf6;
+  color: #0276aa;
+}
+
+.widgetLgButton.Completed {
   background-color: #e5faf2;
   color: #3bb077;
+}
+
+.order-id {
+  text-decoration: none;
 }
