--- a/src/pages/orderList/OrderList.css
+++ b/src/pages/orderList/OrderList.css
@@ -7,6 +7,20 @@
   align-items: center;
   justify-content: space-between;
   margin: 10px 20px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.orderListBottomContainer {
+  margin-top: 27px;
+  margin-left: 20px;
+  margin-right: 20px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  border-radius: 10px;
+  height: 550px;
 }
 
 .orderListTitle {
